[package]
name = "tmc2209-fw"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
default = ["rp2350", "uart"]
rp2040 = ["embassy-rp/rp2040", "embassy-rp/boot2-w25q080"]
rp2350 = ["embassy-rp/rp235xa"]
# Waveshare RP2040-Zero: only GPIO 0..=15 and 26..=29 are broken out on the
# castellated edge (GPIO16 drives the onboard WS2812). Selecting this feature
# remaps any pin that would otherwise fall outside that range.
rp2040-zero = ["rp2040"]
# Drive the TMC2209s via PDN_UART. Disable to run the drivers in pin-only
# (standalone) mode — UART hardware is not initialized and register reads
# return Error::Uart; writes and config calls are silent no-ops.
uart = []
# Drive one brushed DC motor via an external L298N H-bridge as an additional
# motor-control option alongside the TMC2209 steppers. See src/l298n.rs.
l298n = []

[dependencies]
embassy-rp = { version = "0.10", default-features = false, features = [
    "time-driver",
    "critical-section-impl",
    "rt",
] }
embassy-executor = { version = "0.9", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
] }
embassy-time = { version = "0.5", features = ["tick-hz-1_000_000"] }
embassy-sync = "0.8"
embassy-futures = "0.1"
embassy-usb = "0.6"

tmc2209 = { version = "0.3", default-features = false }
embedded-io = "0.7"
embedded-io-async = "0.7"
pio = "0.3"
pio-proc = "0.3"

cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt = "0.7"
panic-probe = { version = "1", features = ["print-defmt"] }
defmt = "1"
defmt-rtt = "1"

fixed = "1"
libm = "0.2"
heapless = "0.8"
static_cell = "2"
portable-atomic = { version = "1", features = ["critical-section"] }

[profile.release]
debug = 2
lto = "fat"
opt-level = "s"
codegen-units = 1

[profile.dev]
debug = 2
opt-level = "s"
lto = "off"
